--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -1,12 +1,24 @@
-.images-list {
-    margin: 10px 10px 0;
+/* .images-list {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    align-items: flex-start;
+    align-items: flex-end;
     justify-content: space-between;
 }
 
 .image-list img {
-    display: block;
+    width: 250px;
+} */
+
+.image-list {
+    margin: 10px 10px 0;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-gap: 0 10px;
+    grid-auto-rows: 10px;
+}
+
+.image-list img {
+    width: 250px;
 }
